# Projet-full-stack-E5

./: README.md
Projet_API-Youssef-Medkouri/: Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt  run.sh  setup.sh
Projet_API-Youssef-Medkouri/api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
Projet_API-Youssef-Medkouri/api/migrations/: 0001_initial.py  0002_order_restaurant.py  0003_alter_order_restaurant.py
Projet_API-Youssef-Medkouri/restaurant/: settings.py  urls.py
